--- a/combo_proofs.tex
+++ b/combo_proofs.tex
@@ -11,6 +11,8 @@
 \cfoot{} % Center footer
 \rfoot{Page\ \thepage\ of\ \pageref{LastPage}} % Right footer
 
+\linespread{1.1} % Line spacing
+
 \newcommand\blankpage{
     \thispagestyle{empty}
     \addtocounter{page}{-1}
@@ -25,13 +27,92 @@
 
 \begin{problem}
     Prove the following identity.
-    $$x^2=x\cdot x$$
+    $$\binom{n}{k}=\binom{n-2}{k}+2\binom{n-2}{k-1}+\binom{n-2}{k-2}$$
 \end{problem}
 
 \begin{solution}
-    It is trivial by inspection.
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 2 -----------------------
+
+\begin{problem}
+    Prove the following identity.
+    $$\binom{n}{k}=\sum_{j=0}^m\binom{m}{j}\binom{n-m}{k-j}$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 3 -----------------------
+
+\begin{problem}
+    Prove the following identity for $n\geq1$.
+    $$\sum_{k=0}^nk\binom{n}{k}=n2^{n-1}$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 4 -----------------------
+
+\begin{problem}
+    Prove the following identity for $n\geq0$.
+    $$1+\binom{n}{1}2+\binom{n}{2}4+\ldots+\binom{n}{n-1}2^{n-1}+\binom{n}{n}2^n=3^n$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 5 -----------------------
+
+\begin{problem}
+    Prove the following identity for $n\geq0$.
+    $$\sum_{k=1}^nf_{2k-1}=f_{2n}-1$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 6 -----------------------
+
+\begin{problem}
+    Prove the following identity for $n\geq0$.
+    $$\sum_{k=0}^n\binom{n}{k}F_k=F_{2n}$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
+%------------------------- Problem 7 -----------------------
+
+\begin{problem}
+    Prove the following identity for $n\geq2$.
+    $$\sum_{k=0}^nk^2\binom{n}{k}=n2^{n-1}+n(n-1)2^{n-2}$$
+\end{problem}
+
+\begin{solution}
+    \vfill
 \end{solution}
 
 \newpage
 
 \end{document}
+
