--- a/combo_proofs.tex
+++ b/combo_proofs.tex
@@ -114,5 +114,18 @@
 
 \newpage
 
+%------------------------- Problem 8 -----------------------
+
+\begin{problem}
+    Prove the following identity.
+    $$\sum_{j=r}^n\binom{n}{j}\binom{j}{r}=2^{n-r}\binom{n}{r}$$
+\end{problem}
+
+\begin{solution}
+    \vfill
+\end{solution}
+
+\newpage
+
 \end{document}
 
